--- a/resources/banking/html/ui.html
+++ b/resources/banking/html/ui.html
@@ -20,25 +20,25 @@
 			<div class="header">
 				<img src="logo.png" class="logo">
 				<div class="header-right">
-					<h3 class="sans">Welcome Back, <span class="username">Unknown</span></h3>
-					<h4 class="sans">Current Balance: <span class="currentBalance"></span></h4>
+					<h3 class="sans">Bienvenu, <span class="username">Unknown</span></h3>
+					<h4 class="sans">Vos opérations: <span class="currentBalance"></span></h4>
 				</div>
 			</div>
 			<div class="body home">
 				<div class="centered">
-					<a href="#" class="button sans btnWithdraw">Withdraw</a>
-					<a href="#" class="button sans btnDeposit">Deposit</a>
-					<a href="#" class="button sans btnTransfer">Transfer</a>
-					<a href="#" class="button sans btnBalance">Balance</a>
-					<a href="#" class="button sans btnQuick">Quick $100</a>
-					<a href="#" class="button sans btnClose">Close Menu</a>
+					<a href="#" class="button sans btnWithdraw">Retrait</a>
+					<a href="#" class="button sans btnDeposit">Dépôt</a>
+					<a href="#" class="button sans btnTransfer">Virement</a>
+					<a href="#" class="button sans btnBalance">Graphique</a>
+					<a href="#" class="button sans btnQuick">Retrait rapide $100</a>
+					<a href="#" class="button sans btnClose">Retour</a>
 				</div>
 			</div>
 			<div class="body balance-container">
 				<div class="centered">
 					<div class="number-display"><p class="sans">Current Balance: <span class="currentBalance"></span></p></div>
-					<a href="#" class="button sans btnWithdraw">Withdraw</a>
-					<a href="#" class="button sans btnDeposit">Deposit</a>
+					<a href="#" class="button sans btnWithdraw">Virement</a>
+					<a href="#" class="button sans btnDeposit">Dépôt</a>
 					<a href="#" class="button sans btnHome">Home</a>
 					<a href="#" class="button sans btnClose">Close Menu</a>
 				</div>
@@ -48,24 +48,24 @@
 					<div class="notification"></div>
 					<form id="withdraw-form">
               <input id="amount" type="text" placeholder="Amount" class="sans" required/><br>
-              <button type="submit" id="submit" class="submit sans">Withdraw</button>
+              <button type="submit" id="submit" class="submit sans">Virement</button>
           </form>
 				</div>
 				<div class="centered">
-						<a href="#" class="button sans btnHome">Home</a>
-						<a href="#" class="button sans btnClose">Close Menu</a>
+						<a href="#" class="button sans btnHome">Menu</a>
+						<a href="#" class="button sans btnClose">Quitter</a>
 				</div>
 			</div>
 			<div class="body deposit-container">
 				<div class="form">
 					<form id="deposit-form">
               <input id="amount" type="text" placeholder="Amount" class="sans" required/><br>
-              <button type="submit" id="submit" class="submit sans">Deposit</button>
+              <button type="submit" id="submit" class="submit sans">Déposer ?</button>
           </form>
 				</div>
 				<div class="centered">
-						<a href="#" class="button sans btnHome">Home</a>
-						<a href="#" class="button sans btnClose">Close Menu</a>
+						<a href="#" class="button sans btnHome">Menu</a>
+						<a href="#" class="button sans btnClose">Quitter</a>
 				</div>
 			</div>
 			<div class="body transfer-container">
@@ -73,12 +73,12 @@
 					<form id="transfer-form">
               <input id="amount" type="text" placeholder="Amount" class="sans" required/><br>
               <input id="toPlayer" type="text" placeholder="To" class="sans" required/><br>
-              <button type="submit" id="submit" class="submit sans">Transfer</button>
+              <button type="submit" id="submit" class="submit sans">Confirmer ?</button>
           </form>
 				</div>
 				<div class="centered">
-						<a href="#" class="button sans btnHome">Home</a>
-						<a href="#" class="button sans btnClose">Close Menu</a>
+						<a href="#" class="button sans btnHome">Menu</a>
+						<a href="#" class="button sans btnClose">Quitter</a>
 				</div>
 			</div>
 		</div>
